# lithtech-singularity

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  AGENTS.md  CLIENT_LIKE_SETUP.md  CMakeLists.txt  CMakePresets.json  DEBUG_CLEANUP.md  DIRECTMUSIC_REPLACEMENT_TODO.md  DI_REFACTOR_TODO.md  DTX_FIX.md  GLOW_HANDOFF.md  LITH_KERNEL_TODO.md  MAC_BUILD_TODO.md  PROMPT.md  README.md  RENDER_BACKEND_TODO.md  SHADER_TODO.md  TODO.md  renderdemo.sh
engine/runtime/model/src/: CMakeLists.txt  d3d_model_load.cpp  model.h  model_render_object.cpp
engine/runtime/render_a/src/sys/diligent/: CMakeLists.txt  REFACTOR_TRACKING.md  diligent_2d_draw.cpp  diligent_2d_draw.h  diligent_buffers.cpp  diligent_buffers.h  diligent_debug_draw.cpp  diligent_debug_draw.h  diligent_device.cpp  (+60 more)
engine/runtime/shared/src/: CMakeLists.txt  bdefs.h  cltnetwork.cpp  cltnetwork.h  dtxmgr.cpp  dtxmgr.h  engine_vars.cpp  interface_linkage.cpp  ltmsg_resource_ids.h  ltnetwork_hooks.cpp  ltnetwork_hooks.h  objectmgr.cpp  renderobject.h  renderstruct.h  stacktrace.cpp  stacktrace.h  stdlterror.cpp  sysddstructs.h  sysopts.h
engine/runtime/ui/src/: CMakeLists.txt  cuiformattedpolystring_impl.cpp  lib_ui.vcproj  lib_ui.vcxproj  sdl_cuivectorfont.cpp
engine/runtime/world/src/: CMakeLists.txt  de_objects.h  world_shared_bsp.cpp
engine/sdk/inc/: CMakeLists.txt  iltclient.h  iltdirectmusic.h  iltdrawprim.h  iltfontmanager.h  iltnetwork.h  iltserver.h  iltstream.h  ilttexturestring.h  ltbasedefs.h  ltgraphicscaps.h  ltmodule.h  ltrect.h  ltrenderstyle.h  ltrotation.h  ltsysoptim.h  ltvector.h
libs/slikenet/ltjs/: CMakeLists.txt
tools/DEdit/: CMakeLists.txt  dedit_mac_stub.cpp
tools/DEdit2/: AGENTS.md  CMakeLists.txt  TODO.md  app_main.cpp  bsp_view.cpp  bsp_view.h  dedit2_concommand.cpp  dedit2_concommand.h  dsys_stub.cpp  dtx_loader.cpp  dtx_loader.h  editor_model_mgr.cpp  editor_model_mgr.h  editor_state.cpp  editor_state.h  editor_transfer.cpp  editor_transfer.h  engine_console_stub.cpp  engine_render.cpp  engine_render.h  engine_sprite.cpp  lt_stream.cpp  lt_stream.h  marker_render.cpp  marker_render.h  multi_viewport.cpp  multi_viewport.h  path_utils.cpp  path_utils.h  platform_macos.h  platform_macos.mm  texture_cache.cpp  texture_cache.h  texture_effect_group.cpp  texture_effect_group.h  tree_nodes.cpp  ui_console.cpp  ui_console.h  ui_dock.cpp  ui_dock.h  (+32 more)
tools/DEdit2/app/: document_state.h  editor_loop.cpp  editor_loop.h  editor_paths.cpp  editor_paths.h  editor_session.h  node_props.cpp  node_props.h  project.cpp  project.h  project_utils.cpp  project_utils.h  recent_projects.cpp  recent_projects.h  scene_loader.cpp  scene_loader.h  string_utils.cpp  string_utils.h  world.cpp  world.h  world_core.cpp
tools/DEdit2/brush/: brush_primitive.cpp  brush_primitive.h
tools/DEdit2/brush/csg/: csg_carve.cpp  csg_carve.h  csg_convex_hull.cpp  csg_convex_hull.h  csg_hollow.cpp  csg_hollow.h  csg_join.cpp  csg_join.h  csg_polygon.cpp  csg_polygon.h  csg_split.cpp  csg_split.h  csg_triangulate.cpp  csg_triangulate.h  csg_types.cpp  csg_types.h
tools/DEdit2/brush/csg_dialogs/: csg_carve_dialog.cpp  csg_carve_dialog.h  csg_dialog_helpers.cpp  csg_dialog_helpers.h  csg_hollow_dialog.cpp  csg_hollow_dialog.h  csg_join_dialog.cpp  csg_join_dialog.h  csg_split_dialog.cpp  csg_split_dialog.h  csg_triangulate_dialog.cpp  csg_triangulate_dialog.h
tools/DEdit2/brush/geometry_dialogs/: face_extrude_dialog.cpp  face_extrude_dialog.h  geometry_dialog_state.h  geometry_ops_ui.cpp  geometry_ops_ui.h  vertex_weld_dialog.cpp  vertex_weld_dialog.h
tools/DEdit2/brush/geometry_ops/: face_extrude.cpp  face_extrude.h  flip_normal.cpp  flip_normal.h  vertex_weld.cpp  vertex_weld.h
tools/DEdit2/brush/texture_dialogs/: surface_flags_dialog.cpp  surface_flags_dialog.h  texture_replace_dialog.cpp  texture_replace_dialog.h  uv_fit_dialog.cpp  uv_fit_dialog.h  uv_projection_dialog.cpp  uv_projection_dialog.h  uv_transform_dialog.cpp  uv_transform_dialog.h
tools/DEdit2/brush/texture_ops/: surface_flags.cpp  surface_flags.h  texture_applicator.cpp  texture_applicator.h  texture_replace.cpp  texture_replace.h  uv_fit.cpp  uv_fit.h  uv_projection.cpp  uv_projection.h  uv_transform.cpp  uv_transform.h  uv_types.h
tools/DEdit2/docs/: authoring_port_shortlist.md
tools/DEdit2/geometry/: edit_mode.h  geometry_mode_state.cpp  geometry_mode_state.h  subobject_picking.cpp  subobject_picking.h  subobject_refs.h  subobject_selection.cpp  subobject_selection.h
tools/DEdit2/grid/: grid_settings.cpp  grid_settings.h
tools/DEdit2/grouping/: node_grouping.cpp  node_grouping.h
tools/DEdit2/selection/: depth_cycle.cpp  depth_cycle.h  marquee_selection.cpp  marquee_selection.h  selection_filter.cpp  selection_filter.h  selection_query.cpp  selection_query.h
tools/DEdit2/tests/: CMakeLists.txt  brush_primitive_tests.cpp  csg_carve_tests.cpp  csg_dialog_helpers_tests.cpp  csg_hollow_tests.cpp  csg_join_tests.cpp  csg_polygon_tests.cpp  csg_split_tests.cpp  csg_triangulate_tests.cpp  csg_types_tests.cpp  document_state_tests.cpp  geometry_mode_tests.cpp  geometry_ops_tests.cpp  grid_tests.cpp  grouping_tests.cpp  path_utils_tests.cpp  project_tests.cpp  scene_ui_tests.cpp  selection_tests.cpp  string_utils_tests.cpp  subobject_picking_tests.cpp  surface_flags_tests.cpp  texture_applicator_tests.cpp  texture_browser_tests.cpp  texture_replace_tests.cpp  transform_tests.cpp  uv_fit_tests.cpp  uv_projection_tests.cpp  uv_transform_tests.cpp  uv_types_tests.cpp  world_tests.cpp
tools/DEdit2/transform/: mirror.cpp  mirror.h  mirror_dialog.cpp  mirror_dialog.h  nudge.cpp  nudge.h  rotate_dialog.cpp  rotate_dialog.h
tools/DEdit2/ui/: viewport_panel.cpp  viewport_panel.h
tools/DEdit2/viewport/: brush_renderer.cpp  brush_renderer.h  diligent_viewport.cpp  diligent_viewport.h  interaction.cpp  interaction.h  lighting.cpp  lighting.h  overlays.cpp  overlays.h  render_settings.cpp  render_settings.h  scene_filters.cpp  scene_filters.h  sky_models.cpp  sky_models.h  world_bounds.cpp  world_bounds.h  world_settings.cpp  world_settings.h
(+461 files in other folders)
